--- a/newone.html
+++ b/newone.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TNM</title>
 </head>
 <body>
-    <h1>Du An Moi Me</h1>
-    <h2>Sua Doi</h2>
-    <h3>Moi Me</h3>
+    <h1>News</h1>
 </body>
 </html>
