--- a/newone.html
+++ b/newone.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>News</h1>
+    <h2>Youtube</h2>
+    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur doloribus deleniti saepe omnis! Delectus, porro? Quo deleniti laborum veritatis illo qui debitis earum quia inventore tenetur voluptates impedit, exercitationem blanditiis.</h3>
 </body>
 </html>
